--- a/package.json
+++ b/package.json
@@ -5,18 +5,18 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
     "@google/generative-ai": "^0.2.1",
+    "axios": "^1.6.7",
+    "d3": "^7.8.5",
+    "date-fns": "^3.3.1",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "d3": "^7.8.5",
-    "axios": "^1.6.7",
-    "date-fns": "^3.3.1",
     "react-query": "^3.39.3"
   },
   "devDependencies": {
